💄(layout) lower page detail title and fix other minor bugs
Page detail main title is too big, this especially obvious when text
is longer than four words. Also since working on recent refinements
and fixes, some minor issues have been found with some responsive
behaviors.

This commit fix these issues (only Sass sources have been changed
without changes on theme):

- Lowered down global 'h1' and 'h2' font size and added new
  'extra-font-size' variable with previous h1 value.
- Adjust title size 'large_banner' variants.
- Fix accordion button 'nested-item__title' alignment to the left.
- Another attempt to definitively fix the glitch with wave decoration
  and Chrome zoom/unzoom.
- Add a little bit of space between banner and title on organization
  and category detail.
- Fix header menus align/position between breakpoint 'md' end and
  'lg' start.
- Fix breadcrumb item on small breakpoints when text is too long.

--- a/src/frontend/scss/components/_content.scss
+++ b/src/frontend/scss/components/_content.scss
@@ -11,7 +11,7 @@
       width: 100%;
       height: 5vw;
       position: absolute;
-      bottom: 0;
+      bottom: -0.05rem;
       left: 0;
       right: 0;
       background-image: r-theme-val(body-content, insert-background-image);
