--- a/src/frontend/scss/components/templates/courses/cms/_organization_detail.scss
+++ b/src/frontend/scss/components/templates/courses/cms/_organization_detail.scss
@@ -52,7 +52,7 @@
         width: 100%;
         height: 4rem;
         position: absolute;
-        bottom: 0;
+        bottom: -0.05rem;
         left: 0;
         right: 0;
         background-image: r-theme-val(
@@ -99,6 +99,7 @@
 
   &__intro {
     .organization-detail__title {
+      padding-top: 1rem;
       text-align: left;
       color: r-theme-val(organization-detail, intro-title);
 
